<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.rexehate.danbitests.MainActivity">

    <Button
            android:text="@string/buttonToB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="confirm"
            android:id="@+id/goToB"
            android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/personone"
            android:ems="10"
            android:layout_alignBottom="@+id/goToB" android:layout_alignParentStart="true"
            android:id="@+id/pOne" android:hint="@string/pone"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/pTwo" android:layout_alignParentStart="true" android:id="@+id/num"
            android:text="@string/num" android:hint="@string/number"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/persontwo"
            android:ems="10"
            android:id="@+id/pTwo" android:layout_below="@+id/pOne" android:layout_alignParentStart="true"
            android:hint="@string/ptwo"/>
    <TextView
            android:text="@string/hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_below="@+id/num"
            android:layout_alignParentStart="true" android:id="@+id/hash"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcv" android:layout_below="@+id/hash" android:layout_alignParentStart="true"/>


</RelativeLayout>
